--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,8 @@
     <Title>Upload Image...</Title>
 </head>
 <body>
-    <form action="/upload" method="POST" enctype="multipart/form-data"></form>
+    <form action="/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="image" accept="image/*" required>
         <button type="submit">Upload Image...</button>
+    </form>
 </body>
