--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -43,7 +43,7 @@
             border-radius: var(--radius);
             box-shadow: var(--shadow);
             width: 100%;
-            max-width: 600px;
+            max-width: 630px;
             padding: 0;
             overflow: hidden;
         }
@@ -195,7 +195,6 @@
     <div class="container">
         <div class="header">
             <h1>Image Classifier</h1>
-            <p>Powered by Deep Learning</p>
         </div>
         
         <div class="content">
@@ -237,7 +236,9 @@
         </div>
         
         <div class="footer">
-            Powered by PyTorch and Flask • CNN Architecture with 84.61% accuracy
+            Powered by PyTorch and Flask 
+            <br>
+            @notnbhd
         </div>
     </div>
     
