--- a/src/templates/result.html
+++ b/src/templates/result.html
@@ -250,7 +250,9 @@
         </div>
         
         <div class="footer">
-            Powered by PyTorch and Flask • CNN Architecture with 84.61% accuracy
+            Powered by PyTorch and Flask 
+            <br>
+            @notnbhd
         </div>
     </div>
     
